--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "devDependencies": {
     "@11ty/eleventy": "^1.0.1",
     "geo-tz": "^7.0.2"
+  },
+  "dependencies": {
+    "striptags": "^3.2.0"
   }
 }
